ultimas modificaciones antes de llevar el sistema a la utu

--- a/gestion_de_farmacias/plantillas/base.html
+++ b/gestion_de_farmacias/plantillas/base.html
@@ -42,7 +42,7 @@
             aclarado
             background-color: #d3dfd2;
             */
-            background-color: #e9f3e7;
+            background-color: #e4fdde;
         }
     </style>
 
