--- a/gestion_de_farmacias/plantillas/recetas.html
+++ b/gestion_de_farmacias/plantillas/recetas.html
@@ -8,6 +8,7 @@
 {% include "nav.html" %}
 
 <div class="m-3 mt-5">
+{% if user.rol == 'farmacia' or user.rol == 'medico' or user.rol == 'administrador' %}
 
     {% if user.rol == 'medico'%}
     <div class="container">
@@ -84,11 +85,11 @@
                         <td>{{ receta.paciente }}</td>
                         <td>{{ receta.descripcion }}</td>
                         {% comment %} {% if user.rol == 'medico'%}
-                        <td><a class="btn btn-sm btn-primary" href="/editar_receta/{{ receta.id }}">Editar</a></td>
+                        <td><a class="btn btn-sm btn-outline-primary" href="/editar_receta/{{ receta.id }}">Editar</a></td>
                         {% endif %} {% endcomment %} {% if receta.estado == "RES" and user.rol == 'farmacia'%}
                         <td><a class="btn btn-sm btn-outline-primary" href="/gestionar_receta/{{ receta.id }}">Gestionar</a></td>
-                        {% else %} {% if user.rol == 'medico'%}
-                        <td><a class="btn btn-sm btn-primary" href="/editar_receta/{{ receta.id }}">Editar</a></td>
+                        {% else %} {% if user.rol == 'medico' and receta.medico == user %}
+                        <td><a class="btn btn-sm btn-outline-primary" href="/editar_receta/{{ receta.id }}">Editar</a></td>
                         {% else %}
                         <td>
                             <p></p>
@@ -106,8 +107,11 @@
         {% endif %}
 
     </div>
-
-
+{% else %}
+    <div class="alert alert-warning">
+		<strong>Atencion!</strong> Acceso no esta autorizado.
+    	</div>
+{% endif %}
 
 </div>
 
