--- a/gestion_de_farmacias/plantillas/nav.html
+++ b/gestion_de_farmacias/plantillas/nav.html
@@ -21,7 +21,7 @@
 
     <div class="collapse navbar-collapse" id="navbarTogglercolapse">
         <!-- Links -->
-        <ul class="navbar-nav ">
+        <ul class="navbar-nav">
 
             <li class="nav-item h6 text-center">
                 <a class="nav-link text-light" href="/inicio/">
@@ -85,7 +85,7 @@
                                 </svg> Recetas
                 </a>
             </li>
-            {% endif %} {% if user.rol == 'farmacia' or 'administrador' %}
+            {% endif %} {% if user.rol == "farmacia" or user.rol == "administrador" %}
             <li class="nav-item h6 text-center">
                 <a class="nav-link text-light" href="{% url 'lista_de_usuarios' %}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi mx-auto mb-1e d-none d-lg-block" viewBox="0 0 16 16">
@@ -94,14 +94,6 @@
                 </a>
             </li>
 
-            <li class="nav-item h6 text-center">
-                <a class="nav-link text-light" href="/recetas/">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi mx-auto mb-1e d-none d-lg-block" viewBox="0 0 16 16">
-                                    <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
-                                    <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"/>
-                                </svg> Recetas
-                </a>
-            </li>
             {% endif %} {% if user.is_authenticated %}
             <li class="nav-item h6 text-center">
                 <a class="nav-link text-light" href="{% url 'mis_recetas' %}">
@@ -130,15 +122,7 @@
                                 </svg> Admin
                 </a>
             </li>
-              {% endif %}  {% if user.rol == 'administrador' %}
-            <li class="nav-item h6 text-center">
-                <a class="nav-link text-light" href="{% url 'crear_farmacia' %}">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="i mx-auto mb-1e d-none d-lg-block" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd" d="M7.752.066a.5.5 0 0 1 .496 0l3.75 2.143a.5.5 0 0 1 .252.434v3.995l3.498 2A.5.5 0 0 1 16 9.07v4.286a.5.5 0 0 1-.252.434l-3.75 2.143a.5.5 0 0 1-.496 0l-3.502-2-3.502 2.001a.5.5 0 0 1-.496 0l-3.75-2.143A.5.5 0 0 1 0 13.357V9.071a.5.5 0 0 1 .252-.434L3.75 6.638V2.643a.5.5 0 0 1 .252-.434L7.752.066ZM4.25 7.504 1.508 9.071l2.742 1.567 2.742-1.567L4.25 7.504ZM7.5 9.933l-2.75 1.571v3.134l2.75-1.571V9.933Zm1 3.134 2.75 1.571v-3.134L8.5 9.933v3.134Zm.508-3.996 2.742 1.567 2.742-1.567-2.742-1.567-2.742 1.567Zm2.242-2.433V3.504L8.5 5.076V8.21l2.75-1.572ZM7.5 8.21V5.076L4.75 3.504v3.134L7.5 8.21ZM5.258 2.643 8 4.21l2.742-1.567L8 1.076 5.258 2.643ZM15 9.933l-2.75 1.571v3.134L15 13.067V9.933ZM3.75 14.638v-3.134L1 9.933v3.134l2.75 1.571Z"/>
-                                </svg>Crear Farmacias
-                </a>
-            </li>
-            {% endif %} {% endif %} {% if not request.user.is_authenticated %}
+              {% endif %}  {% endif %} {% if not request.user.is_authenticated %}
 
             <li class="nav-item h6 text-center">
                 <a class="nav-link text-light" href="{% url 'login' %}">
